--- a/.gitattributes
+++ b/.gitattributes
@@ -12,3 +12,4 @@
 *.py filter=lfs diff=lfs merge=lfs -text
 *.docx filter=lfs diff=lfs merge=lfs -text
 *.pptx filter=lfs diff=lfs merge=lfs -text
+*.mp3 filter=lfs diff=lfs merge=lfs -text
