--- a/.gitattributes
+++ b/.gitattributes
@@ -14,3 +14,4 @@
 *.pptx filter=lfs diff=lfs merge=lfs -text
 *.mp3 filter=lfs diff=lfs merge=lfs -text
 *.mp4 filter=lfs diff=lfs merge=lfs -text
+*.ico filter=lfs diff=lfs merge=lfs -text
